Upgrade to LRS Locator 1.2.0
-Fixed bug when locating without mile point
-'Highlight Route' links are now a toggle
-Improved warnings for edge cases

--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,12 @@
   padding-bottom: 3px;
   cursor: pointer;
   outline: none;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
 }
 
 .search-list-item .iconDiv,
