Upgrade to LRS Locator 2.0.0
This update adds support to configure output fields in multiple layers along with many other fixes. This widget no longer relies on the chosen webmap.

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@
     font-size: 14px;
 }
 
+.identify-icon{
+  float: left;
+  width: 32px;
+  height: 32px;
+}
+
 .m2g-input{
   width: 200px;
   height: 28px;
@@ -31,6 +37,16 @@
 
 .LRSLocator-widget .dijitTextBox .dijitInputInner {
   text-align: left;
+}
+
+.LRSLocator-widget .loadingPanel {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(119, 119, 119, 0.5);
+  display: none;
 }
 
 .tooltip{
